--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
   - clang
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y cmake qt5-default
+  - sudo apt-get install -y cmake qt5-default libqt5svg5-dev
 script:
   - mkdir build
   - cd build
