[misc] fix build scripts to ensure ncurses is a required prerequisite and Qt is an optional prerequisite

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,8 @@
 add_subdirectory (qtgui)
 add_subdirectory (nctui)
 
-# set qt properties
+# set and check qt
+find_package (Qt5 COMPONENTS Core Network Widgets Svg)
 get_property (${PROJECT_NAME}_QT_SRC GLOBAL PROPERTY QT_SRC_LIST)
 get_property (${PROJECT_NAME}_QT_UI_SRC GLOBAL PROPERTY QT_UI_SRC_LIST)
 
@@ -21,7 +22,9 @@ QT5_WRAP_UI (QT_UIS_HDRS
 #  ../assets/file1.qrc
 #  )
 
-# set nc properties
+# if set and check nc properties
+set (CURSES_NEED_NCURSES TRUE)
+find_package (Curses REQUIRED)
 get_property (${PROJECT_NAME}_NC_SRC GLOBAL PROPERTY NC_SRC_LIST)
 
 # build program
@@ -32,8 +35,11 @@ target_link_libraries(${PROJECT_NAME}-qt
   Qt5::Core
   Qt5::Widgets
   Qt5::Svg
-)
+  )
 
 ## ncurses tui
 add_executable (${PROJECT_NAME}-nc ${${PROJECT_NAME}_NC_SRC})
 set_property (TARGET ${PROJECT_NAME}-nc PROPERTY CXX_STANDARD 11)
+target_link_libraries(${PROJECT_NAME}-nc
+  ${CURSES_LIBRARIES}
+  )
