--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# .gitignore
+# Stanisław Grams <sgrams@fmdx.pl>
+#
+# secpass.org
+# 2019
 # This file is used to ignore files which are generated
-# ----------------------------------------------------------------------------
-
 *~
 *.autosave
 *.a
@@ -67,7 +70,8 @@ Thumbs.db
 *.pyc
 
 # Binaries
-# --------
 *.dll
 *.exe
 
+# Build dir
+build/
