--- a/src/nctui/CMakeLists.txt
+++ b/src/nctui/CMakeLists.txt
@@ -1,9 +1,8 @@
-##
-## Stanisław Grams <sgrams@fmdx.pl>
 ## src/nctui/CMakeLists.txt
+## Stanisław Grams <sgrams@fmdx.pl>
 ##
-## secpass-git
-##
+## secpass.org
+## © 2019
 # add src files to NC_SRC_LIST
 add_src_files (NC_SRC_LIST
   main.cc
