--- a/src/qtgui/CMakeLists.txt
+++ b/src/qtgui/CMakeLists.txt
@@ -8,8 +8,14 @@ add_src_files (QT_SRC_LIST
   main.cc
   mainwindow.cc
   mainwindow.h
+  aboutdialog.cc
+  aboutdialog.h
+  settingsdialog.cc
+  settingsdialog.h
   )
 # add src files to QT_UI_SRC_LIST
 add_src_files (QT_UI_SRC_LIST
   mainwindow.ui
+  aboutdialog.ui
+  settingsdialog.ui
   )
