--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,8 +3,58 @@
 ##
 ## secpass.org
 ## © 2019
-# add src files to CORE_SRC_LIST
-add_src_files (CORE_SRC_LIST
-  crypto.cc
-  generator.cc
+add_custom_command (
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/core_t.c
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/core.edl
+  COMMAND ${SGX_EDGER8R} --trusted ${CMAKE_CURRENT_SOURCE_DIR}/core.edl
+  --search-path ${TC_ROOT_DIR}/Enclave
+  --search-path ${SGX_SDK}/include
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
+
+add_custom_command (
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/core_u.h
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/core.edl
+  COMMAND ${SGX_EDGER8R} --untrusted ${CMAKE_CURRENT_SOURCE_DIR}/core.edl
+  --search-path ${TC_ROOT_DIR}/Enclave
+  --search-path ${SGX_SDK}/include
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+
+include_directories(
+  $(CMAKE_CURRENT_SOURCE_DIR)
+  ${SGX_SDK}/include
+  ${SGX_SDK}/include/tlibc
+  ${SGX_SDK}/include/stlport
+  .
+  )
+
+add_library (core SHARED
+  core_t.c core_u.h
+  )
+
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SGX_COMMON_CFLAGS} -nostdinc -fvisibility=hidden -fpie -fstack-protector")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -nostdinc++ -DENCLAVE")
+
+target_link_libraries (core PRIVATE "${SGX_COMMON_CFLAGS}\
+-Wl,--no-undefined -nostdlib -nodefaultlibs -Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles -L${SGX_LIBRARY_PATH} \
+-Wl,--whole-archive -l${SGX_TRTS_LIB} -Wl,--no-whole-archive \
+-Wl,--start-group -lsgx_tstdc -lsgx_tcxx -lsgx_tstdcxx -lsgx_tkey_exchange -lsgx_tcrypto -l${SGX_TSVC_LIB} -Wl,--end-group \
+-Wl,-Bstatic -Wl,-Bsymbolic -Wl,--no-undefined \
+-Wl,-pie,-eenclave_entry -Wl,--export-dynamic  \
+-Wl,--defsym,__ImageBase=0 -Wl,--gc-sections   \
+-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/core.lds \
+-L${CMAKE_CURRENT_SOURCE_DIR}")
+
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../nctui/)
+
+add_custom_command (TARGET core
+  POST_BUILD
+  COMMAND ${SGX_ENCLAVE_SIGNER} sign
+  -key core_private.pem
+  -config core.config.xml
+  -enclave $<TARGET_FILE:core>
+  -out ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/core.so
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Signing the core enclave -> ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/core.so")
+
