--- a/src/nctui/CMakeLists.txt
+++ b/src/nctui/CMakeLists.txt
@@ -3,7 +3,16 @@
 ##
 ## secpass.org
 ## © 2019
-# add src files to NC_SRC_LIST
-add_src_files (NC_SRC_LIST
-  main.cc
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SGX_COMMON_CFLAGS} -fPIC -Wno-attributes")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
+
+include_directories (
+  $(CMAKE_CURRENT_SOURCE_DIR)
+  ${SGX_SDK}/include
   )
+
+set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
+set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
+
+link_directories (.)
+link_libraries (c stdc++ ssl crypto -L${SGX_LIBRARY_PATH} ${SGX_URTS_LIB} ${SGX_USVC_LIB})
