--- a/src/nctui/CMakeLists.txt
+++ b/src/nctui/CMakeLists.txt
@@ -15,4 +15,26 @@ set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
 set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
 
 link_directories (.)
-link_libraries (c stdc++ ssl crypto -L${SGX_LIBRARY_PATH} ${SGX_URTS_LIB} ${SGX_USVC_LIB})
+link_libraries (
+  c
+  stdc++
+  ncurses
+  -L${SGX_LIBRARY_PATH} ${SGX_URTS_LIB} ${SGX_USVC_LIB}
+  )
+
+set_source_files_properties (
+  ${CMAKE_CURRENT_SOURCE_DIR}/../core/core_u.c
+  PROPERTIES GENERATED TRUE
+  )
+
+set (
+  SOURCES
+  ${CMAKE_CURRENT_SOURCE_DIR}/../core/core_u.c
+  )
+
+add_executable (secpass-nc main.cc ${SOURCES})
+
+add_dependencies (
+  secpass-nc
+  core
+  )
