--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -21,7 +21,7 @@ add_custom_command (
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
 
-include_directories(
+include_directories (
   $(CMAKE_CURRENT_SOURCE_DIR)
   ${SGX_SDK}/include
   ${SGX_SDK}/include/tlibc
@@ -30,6 +30,7 @@ include_directories(
   )
 
 add_library (core SHARED
+  core.cc core.h
   core_t.c core_u.h
   )
 
@@ -37,24 +38,21 @@ set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SGX_COMMON_CFLAGS} -nostdinc -fvisibility
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -nostdinc++ -DENCLAVE")
 
 target_link_libraries (core PRIVATE "${SGX_COMMON_CFLAGS}\
--Wl,--no-undefined -nostdlib -nodefaultlibs -Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles -L${SGX_LIBRARY_PATH} \
--Wl,--whole-archive -l${SGX_TRTS_LIB} -Wl,--no-whole-archive \
--Wl,--start-group -lsgx_tstdc -lsgx_tcxx -lsgx_tstdcxx -lsgx_tkey_exchange -lsgx_tcrypto -l${SGX_TSVC_LIB} -Wl,--end-group \
--Wl,-Bstatic -Wl,-Bsymbolic -Wl,--no-undefined \
--Wl,-pie,-eenclave_entry -Wl,--export-dynamic  \
--Wl,--defsym,__ImageBase=0 -Wl,--gc-sections   \
--Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/core.lds \
--L${CMAKE_CURRENT_SOURCE_DIR}")
+  -Wl,--no-undefined -nostdlib -nodefaultlibs -Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles -L${SGX_LIBRARY_PATH} \
+  -Wl,--whole-archive -l${SGX_TRTS_LIB} -Wl,--no-whole-archive \
+  -Wl,--start-group -lsgx_tstdc -lsgx_tcxx -lsgx_tkey_exchange -lsgx_tcrypto -l${SGX_TSVC_LIB} -Wl,--end-group \
+  -Wl,-Bstatic -Wl,-Bsymbolic -Wl,--no-undefined \
+  -Wl,-pie,-eenclave_entry -Wl,--export-dynamic  \
+  -Wl,--defsym,__ImageBase=0 -Wl,--gc-sections   \
+  -L${CMAKE_CURRENT_SOURCE_DIR}")
 
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../nctui/)
-
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib/)
 add_custom_command (TARGET core
   POST_BUILD
   COMMAND ${SGX_ENCLAVE_SIGNER} sign
   -key core_private.pem
   -config core.config.xml
   -enclave $<TARGET_FILE:core>
-  -out ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/core.so
+  -out enclave.so
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-  COMMENT "Signing the core enclave -> ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/core.so")
-
+  COMMENT "Signing the core enclave => enclave.so")
