[src] start developing ncurses TUI

--- a/src/nctui/CMakeLists.txt
+++ b/src/nctui/CMakeLists.txt
@@ -31,8 +31,13 @@ set_source_files_properties (
 add_src_files (
   NC_SRC_LIST
   main.cc
+  window.cc
+  draw.cc
+  window.h
+  draw.h
   ${CMAKE_CURRENT_SOURCE_DIR}/../core/core_u.c
   ${CMAKE_CURRENT_SOURCE_DIR}/../common/wrapper.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/../common/file.cc
   )
 
 get_property (${PROJECT_NAME}_NC_SRC GLOBAL PROPERTY NC_SRC_LIST)
