--- a/src/nctui/CMakeLists.txt
+++ b/src/nctui/CMakeLists.txt
@@ -34,14 +34,15 @@ add_src_files (
   draw.cc
   window.cc
   ui.cc
+  clipboard.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/../core/core_u.c
   ${CMAKE_CURRENT_SOURCE_DIR}/../common/bridge.cc
-  ${CMAKE_CURRENT_SOURCE_DIR}/../common/file.cc
 
   # headers
   draw.h
   window.h
   ui.h
+  clipboard.h
   )
 
 get_property (${PROJECT_NAME}_NC_SRC GLOBAL PROPERTY NC_SRC_LIST)
