--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ aliases:
   - &docker_image ubuntu:disco
   - &setup_common |
       apt-get update -qq
-      apt-get install -y cmake qt5-default libqt5svg5-dev wget build-essential libssl-dev libncurses-dev
+      apt-get install -y cmake qt5-default libqt5svg5-dev wget build-essential libssl-dev libncurses-dev libargon2-dev
       wget -O sgx_installer.bin https://download.01.org/intel-sgx/linux-2.5/ubuntu18.04-server/sgx_linux_x64_sdk_2.5.100.49891.bin
       chmod +x ./sgx_installer.bin
       echo yes | ./sgx_installer.bin
